--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     },
     "dependencies": {
         "bulma": "^0.6.2",
+        "font-awesome": "^4.7.0",
+        "vue-router": "^3.0.1",
+        "vuex": "^3.0.1",
         "w3-css": "^4.0.4"
     }
 }
